# webview

./: .gitignore  README.md  pyproject.toml  recordtest.py  test.py
webview/: __init__.py  app.py  config.py  page_view.py  utils.py
webview/scripts/: audio_player.py  audio_recorder.py  html_updater.py
webview/templates/: index.html
